--- a/demo/gasless-embed/env.example
+++ b/demo/gasless-embed/env.example
@@ -7,6 +7,9 @@ FACILITATOR_PRIVATE_KEY=
 # Network (mainnet or testnet)
 DEFAULT_NETWORK=mainnet
 
+# WalletConnect Project ID (get one at https://cloud.walletconnect.com)
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
+
 # RPC URLs (optional, defaults provided)
 BSC_RPC_URL=https://bsc-dataseed.binance.org/
 BSC_TESTNET_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545/
